--- a/leaderboard.html
+++ b/leaderboard.html
@@ -7,7 +7,7 @@
   <button class="w3-bar-item w3-button w3-large" onclick="w3_close()">Close ×</button>
   <a href="https://meetping.github.io/jpeli/" class="w3-bar-item w3-button">HOME</a>
   <a href="leaderboard" class="w3-bar-item w3-button">LEADERBOARD</a>
-  <a href="#" class="w3-bar-item w3-button">ABOUT</a>
+  <a href="about" class="w3-bar-item w3-button">ABOUT</a>
 </div>
 
 <div id="main">
