--- a/leaderboard.html
+++ b/leaderboard.html
@@ -23,7 +23,7 @@
 
 <div class="w3-container">
 <p>leaderboard:<br>
-Juha 206pts <br>Diego 203pts <br>Samuel 179pts 
+Samuel 236pts<br>Juha 206pts <br>Diego 203pts <br>
 </p>
 </center></bt></center></div>
 
