--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <br><select>
 <option>Microbit</option>
 </select><bt>
-<button onclick="playgame()">Play</button>
+<a href="microbit-JPeli.hex"><button onclick="playgame()">Play</button></a>
 <center>
 </p>
 </div>
